# Fract-ol

./: .gitignore  CMakeLists.txt  Makefile  README.md  cl_init.c  color_schemes.h  coloring.c  controls.c  draw.c  draw_image.c  errors.c  fract.c  fractol.c  fractol.h  init_data.c  julia.cl  key.c  key.h  main.c  mandelbrot.cl  newton.cl  read_arg.c  ship.cl  start.c
cl_sources/: classic_phoenix.cl  newton.cl  test.cl  wrong_phoenix.cl
includes/: fractol.h  key.h
libft/: Makefile  ft_striter.c  libft.h
libft/complex/: ft_cplxadd.c  ft_cplxdiv.c  ft_cplxmod.c  ft_cplxmul.c  lib_cmplx.h
sources/: cl_init.c  coloring.c  controls.c  controls_2.c  data_init.c  draw_image.c  errors.c  fractol.c  key.c  main.c  read_arg.c  rgb.c  start.c
test/: cl_init.c  controls_2.c  error.c  fractol.h  keys.h  rgb.c
